add some configuration fro Java 25